fix some positioning and spacing with answerlist

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -557,14 +557,14 @@ body {
 .qa-answer-container {
   display: flex;
   border-top: 1px dashed #bbb;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
+  padding: 8px;
 }
 
 .qa-answer-tag {
+  position: relative;
   text-align: center;
   flex: 1;
+  top: -13.5px;
 }
 
 .qa-answers {
@@ -574,8 +574,7 @@ body {
   max-height: 50vh;
   overflow: auto;
   flex: 19;
-  padding: 8px;
-  margin-top: 5px;
+  padding: 0px 8px 8px 8px;
 }
 
 .qa-answers-dark {
@@ -583,8 +582,7 @@ body {
 }
 
 .qa-answer {
-  padding-bottom: 5px;
-  margin-top: 5px;
+  padding: 5px 0px 5px 0px;
   border-bottom: ridge;
 }
 
